--- a/src/MaiXIFY/appsettings.json
+++ b/src/MaiXIFY/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "SpotifyCredentials": {
-        "ClientID": "78f80754fa3b4e04aa42e02ab31ff933",
-        "ClientSecret": "50fc1e3ab6c64a59a38580116727113c",
+        "ClientID": "insert your Spotify app ClientID here",
+        "ClientSecret": "insert your Spotify app ClientSecret here",
         "RedirectURI": "http://maixify.azurewebsites.net/login/callback"
     },
     "ApplicationInsights": {
